--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -10,7 +10,7 @@
     </li>
     <li class="move-left">
         <button class="ui-btn"
-                onclick="login_redirect()"><span>Войти</span></button>
+                onclick="login_redirect()"><span>Log in</span></button>
     </li>
 </ul>
 
